fix: fixed unit alignment issue

--- a/app/styles/base/_slider.less
+++ b/app/styles/base/_slider.less
@@ -128,7 +128,9 @@
   }
 
   &--unit-container {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: var(--spacing-px-36);
     border: 1px solid var(--color-gray-200);
     min-width: var(--spacing-px-36);
